Closed Bug 1220320 Opened 10 years ago Closed 10 years ago

[Accessibility] Screen Reader prompt no longer plays, automatically in the FTU or after toggling volume up and down several times.

Categories

(Firefox OS Graveyard :: AudioChannel, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(blocking-b2g:2.5?, firefox45 fixed, b2g-v2.2 unaffected, b2g-v2.5 affected, b2g-master verified)

RESOLVED FIXED
FxOS-S11 (13Nov)
blocking-b2g 2.5?
Tracking Status
firefox45 --- fixed
b2g-v2.2 --- unaffected
b2g-v2.5 --- affected
b2g-master --- verified

People

(Reporter: Marty, Assigned: alwu)

References

Details

(Keywords: regression, Whiteboard: [2.5-Daily-Testing][Spark])

Attachments

(3 files, 1 obsolete file)

Attached file logcat_Screen-Reader.txt (obsolete) —
Description: The Screen Reader prompt used to play automatically during the FTU after 15 seconds of inactivity (Implemented in bug 1209049). Additionally, the Screen Reader prompt would play if the user toggled volume up and down several times. The Screen Reader prompt audio is not played in either of these scenarios on the latest builds. Note: The user is still able to activate Screen Reader (by continuing to press volume up and down repeatedly) and hear the Screen Reader voice at an audible volume. Repro Steps: 1) Update a Aries to 20151030120435 2) In the beginning of the FTU, let the device idle for 30+ seconds. 3) Continue to the Home Screen 4) Tap Volume Up and Volume Down buttons back and forth 3 times. Actual: The Screen Reader prompt is not heard during the FTU after 15 seconds of inactivity, or after pressing Volume Up and Volume Down 3 times. Expected: The Screen Reader prompt is heard during the FTU after 15 seconds of inactivity, and after pressing Volume Up and Volume Down 3 times. Environmental Variables: Device: Aries 2.5 Build ID: 20151030120435 Gaia: 91cac94948094cfdcd00cba5c6483e27e80cb3b0 Gecko: c2534acb485963331d67bbc5c07f0d862ed56bf5 Gonk: a19052e4389c3ae2d8fc3e7a74a475401baacc56 Version: 45.0a1 (2.5) Firmware Version: D5803_23.1.A.1.28_NCB.ftf User Agent: Mozilla/5.0 (Mobile; rv:45.0) Gecko/45.0 Firefox/45.0 Repro frequency: 10/10 See attached: Logcat
This issue DOES occur on the latest Flame 2.5 build. The Screen Reader prompt is not heard during the FTU after 15 seconds of inactivity, or after pressing Volume Up and Volume Down 3 times. Environmental Variables: Device: Flame 2.5 BuildID: 20151030030240 Gaia: 91cac94948094cfdcd00cba5c6483e27e80cb3b0 Gecko: b41b92c09fcf94d077a54297aea1dc675b161a9d Gonk: 205ac4204bbbb2098a8046444acba551ba5dc75a Version: 45.0a1 (2.5) Firmware Version: v18D User Agent: Mozilla/5.0 (Mobile; rv:45.0) Gecko/45.0 Firefox/45.0 ********************************************* This issue does NOT occur on the latest Flame 2.2 build. The Screen Reader prompt is heard after pressing Volume Up and Volume Down 3 times. (The Automatic prompt in the FTU is not implemented in the 2.2 branch) Environmental Variables: Device: Flame 2.2 BuildID: 20151030032534 Gaia: 885647d92208fb67574ced44004ab2f29d23cb45 Gecko: b8b7f4efaa6e Gonk: bd9cb3af2a0354577a6903917bc826489050b40d Version: 37.0 (2.2) Firmware Version: v18D User Agent: Mozilla/5.0 (Mobile; rv:37.0) Gecko/37.0 Firefox/37.0
QA Whiteboard: [QAnalyst-Triage?]
Flags: needinfo?(ktucker)
blocking-b2g: --- → 2.5?
QA Whiteboard: [QAnalyst-Triage?]
Flags: needinfo?(ktucker)
QA Contact: mmurrell
This bug is likely caused by fixes from Bug 1180618 B2G Inbound Regression Window: Last Working Environmental Variables: Device: Flame 2.5 BuildID: 20151020014909 Gaia: f95dbdf32ef1d9520022e11415947d4beff08b0f Gecko: b3882ed5ba7a11dc9049048e094a9cb53f15503d Gonk: c4779d6da0f85894b1f78f0351b43f2949e8decd Version: 44.0a1 (2.5) Firmware Version: v18D First Broken Environmental Variables: Device: Flame 2.5 BuildID: 20151020021908 Gaia: d3becb4a5dfd01f3b150b6c52a2afb1e7a129819 Gecko: bab3e830f65d7466df7f4e0ee90615425a2d47fb Gonk: c4779d6da0f85894b1f78f0351b43f2949e8decd Version: 44.0a1 (2.5) Firmware Version: v18D Last Working gaia / First Broken gecko - Issue does occur Gaia: f95dbdf32ef1d9520022e11415947d4beff08b0f Gecko: bab3e830f65d7466df7f4e0ee90615425a2d47fb First Broken gaia / Last Working gecko - Issue does occur Gaia: d3becb4a5dfd01f3b150b6c52a2afb1e7a129819 Gecko: b3882ed5ba7a11dc9049048e094a9cb53f15503d Gaia Pushlog: https://github.com/mozilla-b2g/gaia/compare/f95dbdf32ef1d9520022e11415947d4beff08b0f...d3becb4a5dfd01f3b150b6c52a2afb1e7a129819
Blocks: 1180618
QA Whiteboard: [QAnalyst-Triage?]
Flags: needinfo?(mshuman)
Flags: needinfo?(ktucker)
Flags: needinfo?(jmercado)
Flags: needinfo?(mshuman)
Evan, can you take a look at this please? This might have been caused by the landing for bug 1180618
QA Whiteboard: [QAnalyst-Triage?] → [QAnalyst-Triage+]
Flags: needinfo?(ktucker) → needinfo?(etseng)
Flags: needinfo?(jmercado)
After pressing Volume Up and Volume Down 3 times, AudioChannelService in gaia allowed System app's normal audio channel to play. But there was no sound after gaia did `setMuted(false)`. So looks like this is not about Bug 1180618, this is about the gecko API(setMuted). Could you take a look, Alastor? Thanks.
Flags: needinfo?(etseng) → needinfo?(alwu)
(In reply to KTucker [:KTucker] from comment #3) > Evan, can you take a look at this please? This might have been caused by the > landing for bug 1180618 Hi KTucker, Looks like this is a gecko issue. I found out that in Comment 4. BTW, could you do needinfo to me with the email "evan@tseng.io" in the future? That is my bugzilla account. Thanks.
I can't reproduce this issue in following build environment. Gaia-Rev f07ae1e7065edb7ba2f43f31f0de25394fdb3553 Gecko-Rev 270547:96377bdbcdf3 Build-ID 20151103161056 Version 45.0a1 Device-Name flame FW-Release 4.4.2 FW-Incremental eng.cltbld.20150527.043015 FW-Date Wed May 27 04:30:24 EDT 2015 Bootloader L1TC000118D0
Flags: needinfo?(alwu)
Keywords: qawanted
Results: Im able to repros with both Flame 2.6 and Aries 2.6 Environmental Variables: Device: Flame 2.6 BuildID: 20151103030244 Gaia: 06de78d2c61c084956640c480280ba518b2fe29f Gecko: bb4d614a0b09bcb9738c151dccfcd9b3857a6a7c Gonk: c4779d6da0f85894b1f78f0351b43f2949e8decd Version: 45.0a1 (2.6) Firmware Version: v18D Environmental Variables: Device: Aries 2.6 BuildID: 20151103140850 Gaia: 06de78d2c61c084956640c480280ba518b2fe29f Gecko: 59a6ad6a921f4809dfc37d943d765300c65721e5 Gonk: a19052e4389c3ae2d8fc3e7a74a475401baacc56 Version: 45.0a1 (2.6) Firmware Version: D5803_23.1.A.1.28_NCB.ftf
Flags: needinfo?(jmercado)
Keywords: qawanted
Flags: needinfo?(jmercado)
Assignee: nobody → alwu
Attached file Log : missing callback
From the log, we can see the callback of the AudioChannelAgent is missing! It's very very weird, need to investigate for more details.
Attachment #8681549 - Attachment is obsolete: true
Component: Gaia::System::Accessibility → AudioChannel
Bug 1220320 - implement the nsSupportsWeakReference.
Attachment #8684084 - Flags: review?(amarchesini)
[Root cause] As the nsSpeechTask doesn't implement the nsSupportsWeakReference, we can't get its weak pointer by do_GetWeakReference(). Because of that, the AudioChannelAgent can't use callback to notify the nsSpeechTask about mute/volume changing. --- Hi, Baku, Could you help me review this patch? Very appreciate!!
Comment on attachment 8684084 [details] MozReview Request: Bug 1220320 - implement the nsSupportsWeakReference. https://reviewboard.mozilla.org/r/24487/#review22013
Attachment #8684084 - Flags: review?(amarchesini) → review+
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → FxOS-S11 (13Nov)
This bug has been verified as "pass" on the latest build of Aries KK v2.6 and Flame KK v2.6 512mb by the STR in comment 0 . Actual result: The Screen Reader prompt is heard during the FTU after 15 seconds of inactivity, and after pressing Volume Up and Volume Down several times. See attachment: Verified_Flame_KK_v2.6.3gp Reproduce rate: 0/10. Device: Aries KK v2.6(master)( Pass ) Build ID 20151112120735 Gaia Revision 27bc9412ca607648bc398b25bb1ae25653b2b278 Gaia Date 2015-11-12 02:27:47 Gecko Revision https://hg.mozilla.org/mozilla-central/rev/3cc3b1968524248450c465c4ea2ee5596ffa65f2 Gecko Version 45.0a1 Device Name aries Firmware(Release) 4.4.2 Firmware(Incremental) eng.worker.20151112.112635 Firmware Date Thu Nov 12 11:26:43 UTC 2015 Bootloader s1 Device: Flame KK v2.6 512mb(master)( Pass ) Build ID 20151115150212 Gaia Revision e8c15ae4e5324a210000ee0a869a962aa542009f Gaia Date 2015-11-13 00:10:48 Gecko Revision https://hg.mozilla.org/mozilla-central/rev/7cd2d806bd069c0260ff73f023ac85f892b863bf Gecko Version 45.0a1 Device Name flame Firmware(Release) 4.4.2 Firmware(Incremental) eng.cltbld.20151115.184416 Firmware Date Sun Nov 15 18:44:31 EST 2015 Bootloader L1TC000118D0
QA Whiteboard: [QAnalyst-Triage+] → [QAnalyst-Triage+][MGSEI-Triage+]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: