Bug 1220320 - implement the nsSupportsWeakReference. r=baku