dom/media/webspeech/synth/nsSpeechTask.h
@@ -21,6 +21,7 @@ class SynthStreamListener;
 
 class nsSpeechTask : public nsISpeechTask
                    , public nsIAudioChannelAgentCallback
+                   , public nsSupportsWeakReference
 {
   friend class SynthStreamListener;
 
